amend: small changes for html validator

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
          </nav>
       </header>
       <section class="appear-first container-fluid">
+         <h1 class="sr-only">Little Paradise - Bristol's best indie band</h1>
          <div class="row">
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
             <div class="col-12 col-md-10 col-xl-8" id="hero-outer">
@@ -67,7 +68,7 @@
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
          </div>
       </section>
-      <section class="container appear-third max-width-reduce" id="cta-section">
+      <section class="container appear-second max-width-reduce" id="cta-section">
          <div class="row">
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4 cta">
@@ -87,7 +88,7 @@
             <div class="col-md-1 d-none d-md-block"></div>
          </div>
       </section>
-      <hr>
+      <hr class="appear-second">
       <section class="container appear-third" id="index-music">
          <div class="alt-font">
             <h3 class="index-header">Latest Video</h3>
@@ -95,24 +96,23 @@
                <div class="col-lg-2 d-none d-lg-block"></div>
                <div class="col-lg-8" id="index-youtube">
                   <iframe class="youtube-iframe"
-                     src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0"
+                     src="https://www.youtube.com/embed/ryyKCIndge0"
                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                      allowfullscreen>
-                     <p>Your device does not support iframes</p>
                   </iframe>
                </div>
                <div class="col-lg-2 d-none d-lg-block"></div>
             </div>
          </div>
          <div class="max-width-reduce container">
-         <div class="row music-alert">
-            <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
-            <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
-               <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h5>
-               <a id="listen" class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
+            <div class="row music-alert">
+               <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
+               <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
+                  <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h5>
+                  <a id="listen" class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
+               </div>
+               <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
             </div>
-            <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
-         </div>
          </div>
       </section>
       <hr>
@@ -202,10 +202,10 @@
          integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
          crossorigin="anonymous"></script>
       <script>
-        $('.navbar-collapse a').click(function(){
-            $(".navbar-collapse").collapse('hide');
-        });
-    </script>
-    <!-- Code snippet from https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
+         $('.navbar-collapse a').click(function(){
+             $(".navbar-collapse").collapse('hide');
+         });
+      </script>
+      <!-- Code snippet from https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
    </body>
 </html>
