--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
             </div>
             <div class="mb-3">
                <label for="email" class="form-label">Email address</label>
-               <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+               <input type="email" class="form-control" id="email" aria-describedby="email" required>
             </div>
             <button type="submit" class="btn btn-primary btn-lg" id="email-button">Sign Up</button>
          </form>
