--- a/music.html
+++ b/music.html
@@ -61,7 +61,7 @@
          <div class="row">
             <div class="col-lg-2 col-xl-1"></div>
             <div class="col-lg-8 col-xl-10">
-               <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+               <iframe id="soundcloud-iframe" height="450" allow="autoplay"
                   src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
             </div>
@@ -73,8 +73,7 @@
          <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
-               <iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                  <p>Your device does not support iframes</p>
+               <iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                </iframe>
             </div>
             <div class="col-lg-2"></div>
