--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
          integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
       <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Syne+Mono&display=swap"
+         rel="stylesheet">
       <link rel="stylesheet" href="assets/css/style.css">
-      <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
    </head>
    <body>
       <header>
