replace soundcloud playlist, amend buy now button on homepage to listen

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             <div class="col-12 col-md-4 cta">
                <div class="cta-content">
                   <h2>DEBUT EP <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
-                  <a class="btn btn-primary btn-lg" href="http://www.oddsocksband.bandcamp.com/" role="button"
-                     target="_blank" rel="external">Buy Now</a>
+                  <a class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
                </div>
             </div>
             <div class="col-md-2 d-none d-md-block"></div>
