--- a/music.html
+++ b/music.html
@@ -63,7 +63,7 @@
             <div class="col-lg-2 col-xl-1"></div>
             <div class="col-lg-8 col-xl-10">
                <iframe id="soundcloud-iframe" height="450" allow="autoplay"
-                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1198539133%3Fsecret_token%3Ds-Cyoh8oGvIPB&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
             </div>
             <div class="col-lg-2 col-xl-1"></div>
@@ -90,7 +90,7 @@
                   <div class="card-body">
                      <h3 class="text-center">Little Paradise EP</h3>
                      <p class="card-text text-center">(2021)</p>
-                     <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="http://www.oddsocks.bandcamp.com/" role="button">Buy
+                     <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="http://www.oddsocksband.bandcamp.com/" role="button" target="_blank" rel="external">Buy
                      Now</a>
                   </div>
                </div>
