test: attempt to fix hero image bug by adding loading attribute

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
             <div class="col-12 col-md-10 col-xl-8" id="hero-outer">
                <img src="assets/images/hero-image-min.jpg"
-                  alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
+                  loading="eager" alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
             </div>
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
          </div>
