amend: acknowledgements, clean up css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col-12 col-md-10 col-xl-8" id="hero-outer">
                <img src="assets/images/hero-image-min.jpg"
                   loading="eager" alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
-                  <!-- Hero image loading bug fix found on https://github.com/scott-little/lazyload -->
+                  <!-- credit: hero image loading bug fix found on https://github.com/scott-little/lazyload -->
             </div>
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
          </div>
@@ -205,6 +205,6 @@
              $(".navbar-collapse").collapse('hide');
          });
       </script>
-      <!-- Code snippet by Marta Szymanska found on https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
+      <!-- credit: code snippet by Marta Szymanska found on https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
    </body>
 </html>
