fix: image stretch bug on about page

--- a/about.html
+++ b/about.html
@@ -59,11 +59,11 @@
       <h1 class="appear-first">About</h1>
       <section class="container appear-second" id="about-section">
          <div class="row">
-            <div class="col-lg-7">
+            <div class="col-md-8 offset-md-2 col-lg-7 offset-lg-0 col-xl-6">
                <img src="assets/images/littleparadisesign.jpg" alt="Little Paradise BS3 road sign" class="img-fluid about-image">
                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid disappear about-image"> 
             </div>
-            <div class="col-lg-5">
+            <div class="col-md-8 offset-md-2 col-lg-5 offset-lg-0 col-xl-6">
                <article>
                   <p>Little Paradise are an indie rock band from Bristol comprising of two hip twenty-somethings: Mike
                      Kilcooley and Francis Kershaw.
@@ -101,7 +101,7 @@
                   </aside>
                </article>
             </div>
-            <div class="col d-lg-none d-md-block">
+            <div class="col-md-8 offset-md-2 d-lg-none d-md-block">
                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid about-image">   
             </div>
          </div>
