amend: all cta buttons to same class

--- a/about.html
+++ b/about.html
@@ -90,11 +90,11 @@
                         <div class="row">
                            <div class="col about-cta">
                               <p><em>Contact us:</em></p>
-                              <a class="btn btn-primary btn-lg about-button" href="contact.html" role="button">Contact</a>
+                              <a class="btn btn-primary btn-lg about-button cta-button" href="contact.html" role="button">Contact</a>
                            </div>
                            <div class="col about-cta">
                               <p><em>Live shows:</em></p>
-                              <a class="btn btn-primary btn-lg about-button" href="index.html#tour-dates" role="button">Tour</a>  
+                              <a class="btn btn-primary btn-lg about-button cta-button" href="index.html#tour-dates" role="button">Tour</a>  
                            </div>
                         </div>
                      </div>
