--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                <label for="email" class="form-label">Email address</label>
                <input type="email" class="form-control" id="email" aria-describedby="email" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-lg" id="email-button">Sign Up</button>
+            <button type="submit" class="btn btn-primary btn-lg cta-button" id="email-button">Sign Up</button>
          </form>
       </section>
       <footer class="page-footer">
