--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
             <div class="col-12 col-md-4 cta">
                <div class="cta-content">
                   <h2>DEBUT EP <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
-                  <a class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
+                  <a class="btn btn-primary btn-lg cta-button" href="music.html" role="button">Listen</a>
                </div>
             </div>
             <div class="col-md-2 d-none d-md-block"></div>
             <div class="col-12 col-md-4 cta">
                <div class="cta-content">
                   <h2>SIGN UP <i class="fas fa-envelope-open-text" aria-hidden="true"><span class="sr-only">Envelope</span></i></h2>
-                  <a class="btn btn-primary btn-lg" href="contact.html#email-form" role="button">Join</a>
+                  <a class="btn btn-primary btn-lg cta-button" href="contact.html#email-form" role="button">Join</a>
                </div>
             </div>
             <div class="col-md-1 d-none d-md-block"></div>
@@ -108,7 +108,7 @@
                <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
                <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
                   <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up" aria-hidden="true"></i></h5>
-                  <a id="listen" class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
+                  <a id="listen" class="btn btn-primary btn-lg cta-button" href="music.html" role="button">Listen</a>
                </div>
                <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
             </div>
