--- a/music.html
+++ b/music.html
@@ -91,7 +91,7 @@
                   <div class="card-body">
                      <h3 class="text-center">Little Paradise EP</h3>
                      <p class="card-text text-center">(2021)</p>
-                     <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="http://www.oddsocksband.bandcamp.com/" role="button" target="_blank" rel="external">Buy
+                     <a class="btn btn-primary btn-lg justify-content-center cta-button" id="buy-now" href="http://www.oddsocksband.bandcamp.com/" role="button" target="_blank" rel="external">Buy
                      Now</a>
                   </div>
                </div>
