add: title attributes to iframes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                <div class="col-lg-2 d-none d-lg-block"></div>
                <div class="col-lg-8" id="index-youtube">
-                  <iframe class="youtube-iframe"
+                  <iframe class="youtube-iframe" title="Latest YouTube video by Little Paradise"
                      src="https://www.youtube.com/embed/ryyKCIndge0"
                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                      allowfullscreen>
