--- a/music.html
+++ b/music.html
@@ -62,7 +62,7 @@
          <div class="row">
             <div class="col-lg-2 col-xl-1"></div>
             <div class="col-lg-8 col-xl-10">
-               <iframe id="soundcloud-iframe" height="450" allow="autoplay"
+               <iframe id="soundcloud-iframe" height="450" allow="autoplay" title="Little Paradise SoundCloud playlist"
                   src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1198539133%3Fsecret_token%3Ds-Cyoh8oGvIPB&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
                <!-- credit: mobile overlay fix (show_teaser=false) found at https://stackoverflow.com/questions/39625513/soundcloud-embedded-player-on-mobile -->
@@ -75,7 +75,7 @@
          <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
-               <iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+               <iframe class="youtube-iframe" title="Latest YouTube video by Little Paradise" src="https://www.youtube.com/embed/ryyKCIndge0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                </iframe>
             </div>
             <div class="col-lg-2"></div>
