fix: bugs at 280px

--- a/contact.html
+++ b/contact.html
@@ -64,12 +64,12 @@
                <div class="contact-content cta-content">
                   <div id="enquiries">
                      <h2>General Enquiries <i class="fas fa-question-circle" aria-hidden="true"></i><span class="sr-only">Question Mark</span></h2>
-                     <p class="text-wrap">littleparadise.bri@gmail.com</p>
+                     <p class="text-wrap">littleparadise.bris@gmail.com</p>
                   </div>
                   <hr>
                   <div id="bookings">
                      <h2>Bookings <i class="fas fa-book"></i></h2>
-                     <p class="text-wrap">bookings.littleparadise@gmail.com</p>
+                     <p class="text-wrap">bookings.lpmusic@gmail.com</p>
                   </div>
                </div>
             </div>
