amend: email form size

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
          </nav>
       </header>
       <h1 class="appear-first">Contact</h1>
-      <section class="appear-second container">
+      <section class="appear-first container">
          <div class="row">
             <div class="col-md-1 col-lg-2 d-none d-md-block"></div>
             <div class="col-md-10 col-lg-8 text-center contact-info cta">
@@ -76,7 +76,7 @@
             <div class="col-md-1 col-lg-2 d-none d-md-block"></div>
          </div>
       </section>
-      <section class="container appear-second cta max-width-reduce" id="email-form">
+      <section class="container appear-first cta max-width-reduce" id="email-form">
          <form method="post" action="#">
             <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text" aria-hidden="true"></i><span class="sr-only">Envelope</span></h3>
             <div class="mb-3">
