--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="col-12 col-md-5 venue">
                <p>The Louisiana, Bristol</p>
             </div>
-            <div class="col-12 col-md-2"><a class="btn btn-dark" href="http://www.ticketmaster.com" role="button"
+            <div class="col-12 col-md-2"><a class="btn btn-dark ticket-button" href="http://www.ticketmaster.com" role="button"
                target="_blank">TICKETS</a></div>
          </div>
          <hr>
@@ -138,7 +138,7 @@
             <div class="col-12 col-md-5 venue">
                <p>Mr Wolf's, Bristol</p>
             </div>
-            <div class="col-12 col-md-2"><a class="btn btn-dark" href="http://www.ticketmaster.com" role="button"
+            <div class="col-12 col-md-2"><a class="btn btn-dark ticket-button" href="http://www.ticketmaster.com" role="button"
                target="_blank">TICKETS</a></div>
          </div>
          <hr>
@@ -151,7 +151,7 @@
             <div class="col-12 col-md-5 venue">
                <p>SWX, Bristol</p>
             </div>
-            <div class="col-12 col-md-2"><a class="btn btn-dark" href="http://www.ticketmaster.com" role="button"
+            <div class="col-12 col-md-2"><a class="btn btn-dark ticket-button" href="http://www.ticketmaster.com" role="button"
                target="_blank">TICKETS</a></div>
          </div>
          <hr>
