add: responsive properties to main cta at 280px

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             <div class="col-md-1 d-none d-md-block"></div>
             <div class="col-12 col-md-4 cta">
                <div class="cta-content">
-                  <h2>DEBUT EP <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
+                  <h2 class="cta-heading">DEBUT EP <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
                   <a class="btn btn-primary btn-lg cta-button" href="music.html" role="button">Listen</a>
                </div>
             </div>
             <div class="col-md-2 d-none d-md-block"></div>
             <div class="col-12 col-md-4 cta">
                <div class="cta-content">
-                  <h2>SIGN UP <i class="fas fa-envelope-open-text" aria-hidden="true"><span class="sr-only">Envelope</span></i></h2>
+                  <h2 class="cta-heading">SIGN UP <i class="fas fa-envelope-open-text" aria-hidden="true"><span class="sr-only">Envelope</span></i></h2>
                   <a class="btn btn-primary btn-lg cta-button" href="contact.html#email-form" role="button">Join</a>
                </div>
             </div>
