amend: email form button spacing

--- a/contact.html
+++ b/contact.html
@@ -80,11 +80,11 @@
          <form method="post" action="#">
             <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text" aria-hidden="true"></i><span class="sr-only">Envelope</span></h3>
             <div class="mb-3">
-               <label for="name" class="form-label">Name</label>
+               <label for="name" class="form-label">Name:</label>
                <input type="text" class="form-control" id="name" name="name" required>
             </div>
             <div class="mb-3">
-               <label for="email" class="form-label">Email address</label>
+               <label for="email" class="form-label">Email address:</label>
                <input type="email" class="form-control" id="email" aria-describedby="email" required>
             </div>
             <button type="submit" class="btn btn-primary btn-lg cta-button" id="email-button">Sign Up</button>
