remove: unused footer class

--- a/gallery.html
+++ b/gallery.html
@@ -133,10 +133,10 @@
             </div>
          </div>
       </section>
-      <footer class="page-footer">
+      <footer>
          <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
-            <ul id="footer-social" class="page-footer">
+            <ul id="footer-social">
                <li>
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
