add: soundcloud to social links + new YT vid

--- a/music.html
+++ b/music.html
@@ -44,13 +44,13 @@
                      <a href="http://www.facebook.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
                   </li>
                   <li class="nav-item mr-2">
-                     <a href="http://www.youtube.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i><span class="sr-only">Youtube</span></a>
+                     <a href="https://www.youtube.com/channel/UCRN1cWLGIFh-nX8_fSF7lbg" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i><span class="sr-only">Youtube</span></a>
                   </li>
                   <li class="nav-item mr-2">
                      <a href="http://www.instagram.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
                   </li>
                   <li class="nav-item mr-2">
-                     <a href="http://www.soundcloud.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-soundcloud"></i><span class="sr-only">Soundcloud</span></a>
+                     <a href="https://soundcloud.com/little-paradise-bristol" target="_blank" rel="external" class="nav-link"><i class="fab fa-soundcloud"></i><span class="sr-only">Soundcloud</span></a>
                   </li>
                </ul>
             </div>
@@ -58,7 +58,7 @@
       </header>
       <h1 class="appear-first">Music</h1>
       <section class="music-content appear-second container">
-         <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
+         <h2 class="music-heading">SoundCloud <a href="https://soundcloud.com/little-paradise-bristol" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
          <div class="row">
             <div class="col-lg-2 col-xl-1"></div>
             <div class="col-lg-8 col-xl-10">
@@ -75,7 +75,7 @@
          <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
-               <iframe class="youtube-iframe" title="Latest YouTube video by Little Paradise" src="https://www.youtube.com/embed/ryyKCIndge0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+               <iframe class="youtube-iframe" title="Latest YouTube video by Little Paradise" src="https://www.youtube.com/embed/r3HyInZoK6g" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                </iframe>
             </div>
             <div class="col-lg-2"></div>
@@ -112,7 +112,7 @@
                   <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                </li>
                <li>
-                  <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
+                  <a href="https://soundcloud.com/little-paradise-bristol" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                </li>
             </ul>
          </div>
