--- a/about.html
+++ b/about.html
@@ -44,13 +44,13 @@
                      <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                   </li>
                   <li class="nav-item mr-2">
-                     <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
+                     <a href="https://www.youtube.com/channel/UCRN1cWLGIFh-nX8_fSF7lbg" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                   </li>
                   <li class="nav-item mr-2">
                      <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                   </li>
                   <li class="nav-item mr-2">
-                     <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
+                     <a href="https://soundcloud.com/little-paradise-bristol" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                   </li>
                </ul>
             </div>
@@ -114,13 +114,13 @@
                   <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
                </li>
                <li>
-                  <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
+                  <a href="https://www.youtube.com/channel/UCRN1cWLGIFh-nX8_fSF7lbg" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
                </li>
                <li>
                   <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
                </li>
                <li>
-                  <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
+                  <a href="https://soundcloud.com/little-paradise-bristol" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
                </li>
             </ul>
          </div>
