remove: form method + action to fix error

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
          </div>
       </section>
       <section class="container appear-first cta max-width-reduce" id="email-form">
-         <form method="post" action="#">
+         <form>
             <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text" aria-hidden="true"></i><span class="sr-only">Envelope</span></h3>
             <div class="mb-3">
                <label for="name" class="form-label">Name:</label>
