--- a/music.html
+++ b/music.html
@@ -61,7 +61,7 @@
          <h2 class="music-heading">SoundCloud <a href="https://soundcloud.com/little-paradise-bristol" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
          <div class="row">
             <div class="col-lg-2 col-xl-1"></div>
-            <div class="col-lg-8 col-xl-10">
+            <div class="col-lg-8 col-xl-10 px-0">
                <iframe id="soundcloud-iframe" height="450" allow="autoplay" title="Little Paradise SoundCloud playlist"
                   src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1198539133%3Fsecret_token%3Ds-Cyoh8oGvIPB&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
                <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
@@ -74,7 +74,7 @@
          <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
          <div class="row">
             <div class="col-lg-2"></div>
-            <div class="col-lg-8">
+            <div class="col-lg-8 px-0">
                <iframe class="youtube-iframe" title="Latest YouTube video by Little Paradise" src="https://www.youtube.com/embed/r3HyInZoK6g" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                </iframe>
             </div>
